--- a/com-project-clean/src/main/resources/templates/admin/humanResource/vacation/selectMyVacationDetail.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/vacation/selectMyVacationDetail.html
@@ -26,6 +26,7 @@
 	border-width: 1px;
 	font-size: 14px;
 	padding: 10px 10px;
+	height: 55px;
 }
 
 .tg2 th {
@@ -89,8 +90,8 @@
     <div th:replace="/common/Header.html"></div>
 	<div th:replace="/admin/adminAside.html"></div>
       <!-- 결재라인 -->
-      <div class="confirmDateContainer">
-        <table class="tg confirmTable" style="table-layout: fixed; width: 588px">
+      <div class="confirmDateContainer" align="center">
+        <table class="tg confirmTable" style="table-layout: fixed; width: 600px">
           <colgroup>
             <col style="width: 186px">
             <col style="width: 201px">
@@ -127,7 +128,7 @@
       </div>
 
     <div class="registVacationContainer">
-        <table class="tg2" style="table-layout: fixed; width: 502px">
+        <table class="tg2" style="table-layout: fixed; width: 1000px">
             <colgroup>
             <col style="width: 250px">
             <col style="width: 450px">
