--- a/com-project-clean/src/main/resources/templates/admin/adminAside.html
+++ b/com-project-clean/src/main/resources/templates/admin/adminAside.html
@@ -7,6 +7,11 @@
 body {
   font-family: "Lato", sans-serif;
 }
+table td{
+text-align: center;}
+
+table tr{
+text-align: center;}
 
 /* Fixed sidenav, full height */
 .sidenav {
