--- a/com-project-clean/src/main/resources/templates/admin/humanResource/blackList/selectBlackListDetail.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/blackList/selectBlackListDetail.html
@@ -22,81 +22,97 @@
 	text-align: center;
 }
 
+.section{
+	margin-left: 0 !important;
+	margin-top: 0 !important;
+}
+.tableBox{
+	width: 770px;
+}
+.tableBox td {
+	border: solid 1px;
+	font-size: 14px;
+	padding: 10px 10px;
+}
+
+.buttonBox{
+	width:755px;
+	text-align: center;
+}
 
 </style>
 </head>
 <body>
 	<div th:replace="/common/Header.html"></div>
 	<div th:replace="/admin/adminAside.html"></div>
-    <div>
-        <table class="tg" style="table-layout: fixed; width: 736px">
-        <colgroup>
-        <col style="width: 158px">
-        <col style="width: 147px">
-        <col style="width: 155px">
-        <col style="width: 139px">
-        <col style="width: 68px">
-        <col style="width: 69px">
-        </colgroup>
+	
+    <section class="section">
+        <table class="tableBox">
+            <colgroup> <!-- width = 770px -->
+	              <col style="width: 150px">
+	              <col style="width: 165px">
+	              <col style="width: 150px">
+	              <col style="width: 165px">
+	              <col style="width: 70px">
+	              <col style="width: 70px">
+            </colgroup>
          <thead>
           <tr>
-            <td class="tg-7btt">직원번호</td>
-            <!-- @{/adminEmployeePicture/} + ${employee.employeePictureSaveName} -->
-            <td class="tg-7btt" th:text="${employee.employeeNo}"></td>
-            <td class="tg-7btt">이름</td>
-            <td class="tg-7btt" th:text="${employee.employeeName}"></td>
-            <td class="tg-7btt" colspan="2" rowspan="3">
+            <td>직원번호</td>
+            <td th:text="${employee.employeeNo}"></td>
+            <td>이름</td>
+            <td th:text="${employee.employeeName}"></td>
+            <td colspan="2" rowspan="3">
             
              <img id="pictureImg" th:src="@{/adminEmployeePicture/} + ${employee.employeePictureSaveName}" 
              	  alt="사진을 등록해주세요" width="100px" height="100px" onerror="this.style.display='none'" >
             </td>
-            <!-- <td class="tg-7btt" colspan="2" rowspan="3" th:text="${employeePicture.employeePictureSaveName}"></td> -->
           </tr>
           <tr>
-            <td class="tg-7btt">ID</td>
-            <td class="tg-7btt" th:text="${employee.employeeId}"></td>
-            <td class="tg-7btt">전화번호</td>
-            <td class="tg-7btt" th:text="${employee.employeePhone}"></td>
+            <td>ID</td>
+            <td th:text="${employee.employeeId}"></td>
+            <td>전화번호</td>
+            <td th:text="${employee.employeePhone}"></td>
           </tr>
           <tr>
-            <td class="tg-7btt">생년월일</td>
-            <td class="tg-7btt" th:text="${employee.employeeBirth}"></td>
-            <td class="tg-7btt">퇴사여부</td>
-            <td class="tg-7btt" th:text="${employee.employeeRetireYn}"></td>
+            <td>생년월일</td>
+            <td th:text="${employee.employeeBirth}"></td>
+            <td>퇴사여부</td>
+            <td th:text="${employee.employeeRetireYn}"></td>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td class="tg-7btt">이메일</td>
-            <td class="tg-7btt" colspan="5" th:text="${employee.employeeEmail}"></td>
+            <td>이메일</td>
+            <td colspan="5" th:text="${employee.employeeEmail}"></td>
           </tr>
           <tr>
-            <td class="tg-7btt">우편번호</td>
-            <td class="tg-7btt" th:text="${address.addressNo}"></td>
-            <td class="tg-7btt">기본주소</td>
-            <td class="tg-7btt" colspan='3' th:text="${address.address}"></td>
+            <td>우편번호</td>
+            <td th:text="${address.addressNo}"></td>
+            <td>기본주소</td>
+            <td colspan='3' th:text="${address.address}"></td>
           </tr>
           <tr>
-            <td class="tg-7btt">상세주소</td>
-            <td class="tg-7btt" colspan="5" th:text="${address.addressDetail}"></td>
+            <td>상세주소</td>
+            <td colspan="5" th:text="${address.addressDetail}"></td>
           </tr>
           <tr>
-            <td class="tg-7btt">입사일</td>
-            <td class="tg-7btt" th:text="${employee.employeeHireDate}"></td>
-            <td class="tg-7btt">퇴사일</td>
-            <td class="tg-7btt" colspan="3" th:text="${employee.employeeRetireDate}"></td>
+            <td>입사일</td>
+            <td th:text="${employee.employeeHireDate}"></td>
+            <td>퇴사일</td>
+            <td colspan="3" th:text="${employee.employeeRetireDate}"></td>
           </tr>
           <tr>
-            <td class="tg-7btt">누적경고횟수</td>
-            <td class="tg-7btt" th:text="${employee.employeeSumCount}"></td>
-            <td class="tg-7btt">누적근무시간</td>
-            <td class="tg-7btt" colspan="3" th:text="${employee.employeeSumTime}"></td>
+            <td>누적경고횟수</td>
+            <td th:text="${employee.employeeSumCount}"></td>
+            <td>누적근무시간</td>
+            <td colspan="3" th:text="${employee.employeeSumTime}"></td>
           </tr>
           <tr>
-            <td class="tg-7btt">마지막 로그인 일자</td>
-            <td class="tg-7btt" th:text="${employee.employeeLastLoginDate}"></td>
-            <td class="tg-7btt">블랙리스트 여부</td>
-            <td class="tg-7btt" colspan="3" th:text="${employee.employeeBlackListYn}"></td>
+            <td>마지막 로그인 일자</td>
+            <td th:text="${employee.employeeLastLoginDate}"></td>
+            <td>블랙리스트 여부</td>
+            <td colspan="3" th:text="${employee.employeeBlackListYn}"></td>
           </tr>
         </tbody>
         </table>
@@ -105,6 +121,6 @@
             <tr>
             </tr>
         </table>
-    </div>
+    </section>
 </body>
 </html>
