--- a/com-project-clean/src/main/resources/templates/admin/humanResource/registEmployee/adminRegistMainHeader.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/registEmployee/adminRegistMainHeader.html
@@ -9,17 +9,19 @@
 <body>
 	<button onclick="location.href='/admin/hr/regist/employeePage'">직원등록</button>
 	
-	                <span sec:authorize="hasRole('ROLE_ADMIN_HR')">
+	                <th:block sec:authorize="hasRole('ROLE_ADMIN_HR')">
+
                 	<!-- HR -->
                     <span sec:authorize="!hasRole('ROLE_ADMIN_BOSS')">	
 					<button onclick="location.href='/admin/hr/waiting/employeeHR/move'">대기중직원(인사)</button>
                     </span>
                     
                     <!-- BOSS -->
-						<button onclick="location.href='/admin/hr/waiting/employeeBoss/move'">대기중직원(대표)</button>
                     <span sec:authorize="hasRole('ROLE_ADMIN_BOSS')">
+						<button onclick="location.href='/admin/hr/waiting/employeeBoss/move'">대기중직원(대표)</button>
+
                     </span>
-                </span>
+                </th:block>
 	
 	<button onclick="location.href='/admin/hr/return/employee/move'">반려직원</button>
 </body>
