--- a/com-project-clean/src/main/resources/templates/admin/humanResource/registEmployee/returnEmployee.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/registEmployee/returnEmployee.html
@@ -6,199 +6,179 @@
 <title>Document</title>
 <style type="text/css">
 
+.section{
+	margin-left: 0 !important;
+	margin-top: 0 !important;
+}
 /* 결재 테이블 */
-.tg td {
-	border-style: solid;
-	border-width: 1px;
+.confirmTableBox td {
+	border: solid 1px;
 	font-size: 14px;
-}
-
-.tg th {
-	border-style: solid;
-	border-width: 1px;
-	font-size: 14px;
-}
-
-.tg .tg-amwm {
-	font-weight: bold;
-	text-align: center;
-}
-
-/* 인사 테이블 */
-.tg2 td {
-	border-style: solid;
-	border-width: 1px;
-	font-size: 14px;
-	padding: 10px 10px;
-}
-
-.tg2 th {
-	border-style: solid;
-	border-width: 1px;
-	font-size: 14px;
-}
-
-.tg2 .tg2-7btt {
-	font-weight: bold;
-	text-align: center;
 }
 
 .comfirmBox td {
 	height: 75px;
 }
 
-.confirmTable {
-	margin: 20px;
+.confirmTableBox {
+	width: 550px;
+	margin-bottom: 20px;
 }
 
-.confirmHeight {
-	margin: auto;
-	line-height: center;
+.confirmNameBox{
+	 line-height: 80px;
 }
 
-.container {
-	width: 1500px;
-	margin: 0 auto;
+.confirmDateBox{
+	height: 25px;
 }
+
+/* 인사 테이블 */
+.tableBox{
+	width: 750px;
+}
+.tableBox td {
+	border: solid 1px;
+	font-size: 14px;
+	padding: 10px 10px;
+}
+
 </style>
 </head>
 <body>
 	<div th:replace="/common/Header.html"></div>
-	<div th:replace="/admin/adminAside.html"></div> 
-		<div>
-			<table class="tg confirmTable"
-				style="table-layout: fixed; width: 588px">
-				<colgroup>
-					<col style="width: 186px">
-					<col style="width: 201px">
-					<col style="width: 201px">
-				</colgroup>
+	<div th:replace="/admin/adminAside.html"></div>  
+	
+	<section class="section">
+			<table class="confirmTableBox">
+        <colgroup>
+          <col style="width: 150px">
+          <col style="width: 200px">
+          <col style="width: 200px">
+        </colgroup>
 				<thead>
 					<tr>
-						<td class="tg-amwm">결재 신청 날짜</td>
-						<td class="tg-amwm" colspan="2">
-							<div name="confirmDate" th:text="${returnEmployee.RequestDate}"></div>
+						<td>결재 신청 날짜</td>
+						<td colspan="2">
+							<div name="confirmDateBox" th:text="${returnEmployee.RequestDate}"></div>
 						</td>
 					</tr>
 				</thead>
 				<tbody>
 					<tr>
-						<td class="tg-amwm confirmHeight" rowspan="3">결재</td>
-						<td class="tg-amwm">인사담당자</td>
-						<td class="tg-amwm">대표</td>
+						<td rowspan="3">결재</td>
+						<td>인사담당자</td>
+						<td>대표</td>
 					</tr>
 					<tr class="comfirmBox">
-						<td class="tg-amwm">
+						<td>
 							<!-- 인사 담당자 이름 -->
-							<div name="hrName" th:text="${hrName}" style="line-height: 80px;"></div>
+							<div name="hrName" class="confirmNameBox" th:text="${hrName}"></div>
 						</td>
-						<td class="tg-amwm">
+						<td>
 							<!-- 대표 이름 -->
-							<div name="bossName" th:text="${bossName}"
-								style="line-height: 80px;"></div>
+							<div name="bossName" class="confirmNameBox" th:text="${bossName}"></div>
 						</td>
 					</tr>
 					<tr>
 						<!-- 인사 담당자 날짜 -->
-						<td class="tg-amwm" th:text="${hrConfirm}"></td>
+						<td class="confirmDateBox" th:text="${hrConfirm}"></td>
 						<!-- 보스 날짜 -->
-						<td class="tg-amwm" th:text="${bossConfirm}"></td>
+						<td class="confirmDateBox" th:text="${bossConfirm}"></td>
 					</tr>
 				</tbody>
 			</table>
-		</div>
 
 		<div>
-			<table class="tg2" style="table-layout: fixed; width: 736px">
-				<colgroup>
-					<col style="width: 158px">
-					<col style="width: 147px">
-					<col style="width: 155px">
-					<col style="width: 139px">
-					<col style="width: 68px">
-					<col style="width: 69px">
-				</colgroup>
+			
+			<!-- 인사테이블 -->
+			<table class="tableBox">
+	            <colgroup> <!-- width = 770px -->
+	              <col style="width: 150px">
+	              <col style="width: 165px">
+	              <col style="width: 150px">
+	              <col style="width: 165px">
+	              <col style="width: 70px">
+	              <col style="width: 70px">
+	            </colgroup>
 				<thead>
 					<tr>
-						<td class="tg2-7btt">직원번호</td>
-						<td class="tg2-7btt" th:text="${returnEmployee.employeeNo}"></td>
-						<td class="tg2-7btt">이름</td>
-						<td class="tg2-7btt" th:text="${returnEmployee.employeeName}"></td>
-						<td class="tg2-7btt" colspan="2" rowspan="3"><img
-							id="pictureImg"
-							th:src="@{/adminEmployeePicture/} + ${returnEmployee.employeePictureSaveName}"
-							alt="사진을 등록해주세요"
-							width="100px" height="100px"></td>
+						<td>직원번호</td>
+						<td th:text="${returnEmployee.employeeNo}"></td>
+						<td>이름</td>
+						<td th:text="${returnEmployee.employeeName}"></td>
+						<td colspan="2" rowspan="3"><img id="pictureImg"th:src="@{/adminEmployeePicture/} + ${returnEmployee.employeePictureSaveName}"></td>
 					</tr>
 					<tr>
-						<td class="tg2-7btt">ID</td>
-						<td class="tg2-7btt" th:text="${returnEmployee.employeeId}"></td>
-						<td class="tg2-7btt">전화번호</td>
-						<td class="tg2-7btt" th:text="${returnEmployee.employeePhone}"></td>
+						<td>ID</td>
+						<td th:text="${returnEmployee.employeeId}"></td>
+						<td>전화번호</td>
+						<td th:text="${returnEmployee.employeePhone}"></td>
 					</tr>
 					<tr>
-						<td class="tg2-7btt">생년월일</td>
-						<td class="tg2-7btt" th:text="${returnEmployee.employeeBirth}"></td>
-						<td class="tg2-7btt">퇴사여부</td>
-						<td class="tg2-7btt" th:text="${returnEmployee.employeeRetireYn}"></td>
+						<td>생년월일</td>
+						<td th:text="${returnEmployee.employeeBirth}"></td>
+						<td>퇴사여부</td>
+						<td th:text="${returnEmployee.employeeRetireYn}"></td>
 					</tr>
 				</thead>
 				<tbody>
 					<tr>
-						<td class="tg2-7btt">이메일</td>
-						<td class="tg2-7btt" colspan="5"
+						<td>이메일</td>
+						<td colspan="5"
 							th:text="${returnEmployee.employeeEmail}"></td>
 					</tr>
 					<tr>
-						<td class="tg2-7btt">우편번호</td>
-						<td class="tg2-7btt" th:text="${address.addressNo}"></td>
-						<td class="tg2-7btt">기본주소</td>
-						<td class="tg2-7btt" colspan="3" th:text="${address.address}"></td>
+						<td>우편번호</td>
+						<td th:text="${address.addressNo}"></td>
+						<td>기본주소</td>
+						<td colspan="3" th:text="${address.address}"></td>
 					</tr>
 					<tr>
-						<td class="tg2-7btt">상세주소</td>
-						<td class="tg2-7btt" colspan="5"
+						<td>상세주소</td>
+						<td colspan="5"
 							th:text="${address.addressDetail}"></td>
 					</tr>
 					<tr>
-						<td class="tg2-7btt">입사일</td>
-						<td class="tg2-7btt" th:text="${returnEmployee.employeeHireDate}"></td>
-						<td class="tg2-7btt">퇴사일</td>
-						<td class="tg2-7btt" colspan="3"
+						<td>입사일</td>
+						<td th:text="${returnEmployee.employeeHireDate}"></td>
+						<td>퇴사일</td>
+						<td colspan="3"
 							th:text="${returnEmployee.employeeRetireDate}"></td>
 					</tr>
 					<tr>
-						<td class="tg2-7btt">누적경고횟수</td>
-						<td class="tg2-7btt" th:text="${returnEmployee.employeeSumCount}"></td>
-						<td class="tg2-7btt">누적근무시간</td>
-						<td class="tg2-7btt" colspan="3"
+						<td>누적경고횟수</td>
+						<td th:text="${returnEmployee.employeeSumCount}"></td>
+						<td>누적근무시간</td>
+						<td colspan="3"
 							th:text="${returnEmployee.employeeSumTime}"></td>
 					</tr>
 					<tr>
-						<td class="tg2-7btt">마지막 로그인 일자</td>
-						<td class="tg2-7btt"
+						<td>마지막 로그인 일자</td>
+						<td
 							th:text="${returnEmployee.employeeLastLoginDate}"></td>
-						<td class="tg2-7btt">블랙리스트 여부</td>
-						<td class="tg2-7btt" colspan="3"
+						<td>블랙리스트 여부</td>
+						<td colspan="3"
 							th:text="${returnEmployee.employeeBlackListYn}"></td>
 					</tr>
 					<tr>
-						<td class="tg2-7btt" style="line-height: 150px;">
+						<td style="line-height: 150px;">
 							<div>인사담당자 의견</div>
 						</td>
-						<td class="tg2-7btt" style="line-height: 150px;" colspan="5"
+						<td style="line-height: 150px;" colspan="5"
 							th:text="${hrReason}"></td>
 					</tr>
 					<tr>
-						<td class="tg2-7btt" style="line-height: 150px;">
+						<td style="line-height: 150px;">
 							<div>대표 의견</div>
 						</td>
-						<td class="tg2-7btt" style="line-height: 150px;" colspan="5"
+						<td style="line-height: 150px;" colspan="5"
 							th:text="${bossReason}"></td>
 					</tr>
 				</tbody>
 			</table>
 			<br>
 		</div>
+	</section>
 </body>
 </html>
