--- a/com-project-clean/src/main/resources/templates/admin/humanResource/selectAllEmployee/selectAllEmployee.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/selectAllEmployee/selectAllEmployee.html
@@ -6,18 +6,46 @@
 <title>Document</title>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <style>
-
+	.section{
+		margin-left: 0 !important;
+		margin-top: 0 !important;
+		width: 1000px;
+	}
+	.tableBox{
+		width: 1000px;
+		border: 1px solid black;
+	}
+	.tableBox tr{
+		height: 45px;
+	}
+	.tableBox td{
+		height: 45px;
+	}
+	.searchBox{
+		text-align: right;
+	}
+	.pagingBox{
+		 text-align: center;
+	}
+	.selectBox{
+		text-align: left;
+	}
 </style>
 </head>
 
-<body>
+<body >
 	<div th:replace="/common/Header.html"></div>
 	<div th:replace="/admin/adminAside.html"></div>
-	<div th:replace="/admin/humanResource/selectAllEmployee/selectEmployeeListHeader.html"></div>
-	<br>
+	<section class="section">
+	
 		<!-- 재직자 검색 -->
+	<div class="selectBox">
+	<div th:replace="/admin/humanResource/selectAllEmployee/selectEmployeeListHeader.html"></div>
+	</div>
+	<div class="searchBox">
+	
 		<form name="retireNForm" id="retireNSearch">
-			<span>인사관리 카드조회</span> 
+	<span>재직자 조회</span> 
 			<select name="categoryN" id="categoryN">
 				<option value="all" selected>전체</option>
 				<option value="name">이름</option>
@@ -31,9 +59,8 @@
 			<input type="hidden" value="0" name=page>
 		</form>
 		<!-- 퇴사자 검색 -->
-		               
 		<form name="retireYForm" id="retireYSearch">
-			<span>인사관리 카드조회</span> 
+		<span>퇴사자 조회</span>                
 			<select name="categoryY" id="categoryY">
 				<option value="all" selected>전체</option>
 				<option value="name">이름</option>
@@ -50,8 +77,9 @@
 			<label for="retireNEmployeeRadio">재직자</label> 
 			<input type="radio" value="admin" name="retire" id="retireYEmployeeRadio"> 
 			<label for="retireYEmployeeRadio">퇴사자</label>
+	</div>	
 			
-			<table id="employeeList" border="1">
+			<table class="tableBox" id="employeeList">
 				<thead>
 					<tr>
 						<th>번호</th>
@@ -72,11 +100,11 @@
 		<input type="hidden" value="0" name="categoryN">
         </form>
 			
-				<div id="paging" style="display: flex; justify-content: center;">
+				<div id="paging" class="pagingBox">
                <!-- /* 페이징 버튼들어올 공간 */ -->
 				</div>
 		
-
+</section>
 
 	<script>
 	
