--- a/com-project-clean/src/main/resources/templates/admin/humanResource/vacation/selectMyVacation.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/vacation/selectMyVacation.html
@@ -2,207 +2,229 @@
 <html xmlns:th="https://www.thymeleaf.org"
 	  xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
-    <meta charset="UTF-8">
-    <title>Document</title>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<meta charset="UTF-8">
+<title>Document</title>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     
 
-<style type="text/css">
+<style>
+	.section{
+		margin-left: 0 !important;
+		margin-top: 0 !important;
+		width: 1000px;
+	}
+	.tableBox{
+		width: 1000px;
+		border: 1px solid black;
+	}	
+	.tableBox tr{
+		height: 45px;
+	}
+	.tableBox td{
+		height: 45px;
+	}
+	.searchBox{
+		text-align: right;
+	}
+	.pagingBox{
+		 text-align: center;
+	}
+	.selectBox{
+		text-align: left;
+	}
 </style>
 
 </head>
 <body>
 	<div th:replace="/common/Header.html"></div>
 	<div th:replace="/admin/adminAside.html"></div>
-	<form name="myVacationForm" action="/admin/select/selectMyVacation" id="myVacationForm">
-        <span>나의 휴가 조회</span>
-<!-- 	<select name="category" id="category">
-		<option value="all" selected>전체</option>
-		<option value="request">신청날짜</option>
-		<option value="start">휴가 시작일</option>
-		<option value="end">휴가 종료일</option>
-	</select> 
-		 검색 시작일 <input type="date" name="startDate">
-		 검색 종료일 <input type="date" name="endDate">
-		<input type="text" name="categoryValue" placeholder="휴가 내역 검색">
-		<input type="text" style="display: none;"> <!-- enter - submit 방지 
-		
-		<button type="button" onclick="vacationAjax();">검색</button>
-	 -->
-		<input type="hidden" value="0" name=page>
-<!-- 		<input type="hidden" name=adminNo sec:authentication="principal.adminNo"> -->
-		<input type="hidden" id="adminNo" name="adminNo" th:value="${#authentication.principal.adminNo}">
-		
-	</form>
+	<section class="section">
+	<div>나의 휴가 조회</div>
+		<form name="myVacationForm" action="/admin/select/selectMyVacation" id="myVacationForm">
 
-        <table id="myVacationList" border="1">
-            <thead>
-                <tr>
-                    <th>신청번호</th>
-                    <th>신청날짜</th>
-                    <th>휴가시작일</th>
-                    <th>휴가종료일</th>
-                    <th>휴가구분</th>
-                    <th>승인 여부</th>
-                </tr>
-            </thead>
-				<tbody>
+			<input type="hidden" value="0" name=page> 
+			<input type="hidden" id="adminNo" name="adminNo" th:value="${#authentication.principal.adminNo}">
+		</form>
 
-				</tbody>
-        </table>
-        
-        <div id="paging" style="display: flex; justify-content: center;">
-               <!-- /* 페이징 버튼들어올 공간 */ -->
+		<table id="myVacationList" class="tableBox">
+			<thead>
+				<tr>
+					<th>신청번호</th>
+					<th>신청날짜</th>
+					<th>휴가시작일</th>
+					<th>휴가종료일</th>
+					<th>휴가구분</th>
+					<th>승인 여부</th>
+				</tr>
+			</thead>
+			<tbody>
+
+			</tbody>
+		</table>
+
+		<div id="paging" class="pagingBox">
+			<!-- /* 페이징 버튼들어올 공간 */ -->
 		</div>
-        
-    <script>
-    
-    
-	
+		</section>
+		
+		
+		
+	<script>
+		$(document).ready(function() {
+			vacationAjax();
 
-    $(document).ready(function(){
-    	vacationAjax();
-  	  
-    });
-    
-    /* 페이징 버튼을 통한 요청 함수 */
-    function vacationPage(adminNo, page){
-       console.log("ajax page이동 실행 시도");
-       var queryString = {"adminNo" : adminNo
-	                       , "page" : page};
-       vacationAjaxFunction(queryString);
-    }
-    
-    
-    /* 유저가 조건 선택해 검색하는 요청 함수 */
-    function vacationAjax(){
-       console.log("ajax 기본함수 실행 시도");
-			
-       var queryString = $("form[name=myVacationForm]").serialize();
-       vacationAjaxFunction(queryString);
-    }
-    
-/* 	<div style="display: none;" id="adminNo" sec:authentication="principal.adminNo"></div> */
+		});
 
-	  /* 나의 휴가 조회 ajax */
-    function vacationAjaxFunction(queryString){
-       $.ajax({
-          url : "/admin/select/selectMyVacation",
-          data : queryString,
-          success : function(data){
-             const $table = $("#myVacationList tbody");
-             const $div = $("#paging");
-       		 const adminNo = $("#adminNo").val();
-             /* 데이터 필드, 페이징버튼 필드 초기화 */
-             $table.html("");
-             $div.html("");
-             /* search criteria (페이징 버튼으로 ajax요청보낼 때 사용함) */
-             category=data.category;
-             categoryValue=data.categoryValue;
-             
-             
-				for ( var index in data.vacationList) {
-	                $tr = $("<tr>");   
-					$noTd = $("<td>").text(data.vacationList[index].vacationNo);
-					$requestTd = $("<td>").text(data.vacationList[index].requestDate);
-					$startTd = $("<td>").text(data.vacationList[index].vacationStartDate);
-					$endTd = $("<td>").text(data.vacationList[index].vacationEndDate);
-					$nameTd = $("<td>").text(data.vacationList[index].vacationName);
-					
-					if(data.vacationList[index].vacationLastConfirmYn == "Y"){
-						$lastTd = $("<td>").text("승인완료");	
-					}else{
-						$lastTd = $("<td>").text("승인반려");	
-					}
-					
-					
-							$tr.append($noTd);
-							$tr.append($requestTd);
-							$tr.append($startTd);
-							$tr.append($endTd);
-							$tr.append($nameTd);
-							$tr.append($lastTd);
-
-							$table.append($tr);
-
-							hover();
-
-						}
-             
-             var $startPage = data.startPage;
-             var $endPage = data.endPage;
-             var $currentPage = data.currentPage;
-             var $maxPage = data.maxPage;
-             
-             var $beforeStartPage = data.startPage-1;
-             var $afterEndPage = data.endPage;
-             
-             if($startPage==0){
-                $button = $("<button class='page' disabled><<</button>");
-                $div.append($button);
-             } else {
-                $button = $("<button class='page' id='goBackPage' onclick='vacationPage("+adminNo+","+$beforeStartPage+")'><<</button>");
-                $div.append($button);
-             }
-             
-             for(i=$startPage;i<$endPage;i++){
-                if(i!=$currentPage){
-                   $button = $("<button class='page' onclick=vacationPage("+adminNo+","+(i)+')>'+(i+1)+"</button>");   
-                } else {
-                   $button = $("<button disabled class='page'>"+(i+1)+"</button>");
-                }
-                
-                $div.append($button);
-             }
-             
-             if($maxPage==$endPage){
-                $button = $("<button class='page' disabled>>></button>");
-                $div.append($button);
-             } else {
-                $button = $("<button class='page' id='goForwardPage' onclick='vacationPage("+adminNo+","+$afterEndPage+")>>></button>'");
-                $div.append($button);
-             }
-             
-          },
-          error : function(error){
-             console.log(error);
-          }
-       });
-    };
-
-    
-    
-    
-    
-    
-    
-    
-    
-
-	/* hover event */
-	function hover() {
-		const vacationList = document.getElementsByTagName("td");
-
-		for (let i = 0; i < vacationList.length; i++) {
-			vacationList[i].onmouseenter = function() {
-				this.parentNode.style.backgroundColor = "rgb(50,150,250)";
-				this.parentNode.style.cursor = "pointer";
-			}
-			vacationList[i].onmouseout = function() {
-				this.parentNode.style.backgroundColor = "white";
-			}
-
-			vacationList[i].onclick = function() {
-				location.href = "/admin/select/selectMyVacation/Detail/"
-						+ this.parentNode.children[0].innerText;
-			}
+		/* 페이징 버튼을 통한 요청 함수 */
+		function vacationPage(adminNo, page) {
+			console.log("ajax page이동 실행 시도");
+			var queryString = {
+				"adminNo" : adminNo,
+				"page" : page
+			};
+			vacationAjaxFunction(queryString);
 		}
-	};
-	
-	$(function(){
-	hover();
-	})
-</script>
+
+		/* 유저가 조건 선택해 검색하는 요청 함수 */
+		function vacationAjax() {
+			console.log("ajax 기본함수 실행 시도");
+
+			var queryString = $("form[name=myVacationForm]").serialize();
+			vacationAjaxFunction(queryString);
+		}
+
+		/* 	<div style="display: none;" id="adminNo" sec:authentication="principal.adminNo"></div> */
+
+		/* 나의 휴가 조회 ajax */
+		function vacationAjaxFunction(queryString) {
+			$
+					.ajax({
+						url : "/admin/select/selectMyVacation",
+						data : queryString,
+						success : function(data) {
+							const $table = $("#myVacationList tbody");
+							const $div = $("#paging");
+							const adminNo = $("#adminNo").val();
+							/* 데이터 필드, 페이징버튼 필드 초기화 */
+							$table.html("");
+							$div.html("");
+							/* search criteria (페이징 버튼으로 ajax요청보낼 때 사용함) */
+							category = data.category;
+							categoryValue = data.categoryValue;
+
+							for ( var index in data.vacationList) {
+								$tr = $("<tr>");
+								$noTd = $("<td>").text(
+										data.vacationList[index].vacationNo);
+								$requestTd = $("<td>").text(
+										data.vacationList[index].requestDate);
+								$startTd = $("<td>")
+										.text(
+												data.vacationList[index].vacationStartDate);
+								$endTd = $("<td>")
+										.text(
+												data.vacationList[index].vacationEndDate);
+								$nameTd = $("<td>").text(
+										data.vacationList[index].vacationName);
+
+								if (data.vacationList[index].vacationLastConfirmYn == "Y") {
+									$lastTd = $("<td>").text("승인완료");
+								} else {
+									$lastTd = $("<td>").text("승인반려");
+								}
+
+								$tr.append($noTd);
+								$tr.append($requestTd);
+								$tr.append($startTd);
+								$tr.append($endTd);
+								$tr.append($nameTd);
+								$tr.append($lastTd);
+
+								$table.append($tr);
+
+								hover();
+
+							}
+
+							var $startPage = data.startPage;
+							var $endPage = data.endPage;
+							var $currentPage = data.currentPage;
+							var $maxPage = data.maxPage;
+
+							var $beforeStartPage = data.startPage - 1;
+							var $afterEndPage = data.endPage;
+
+							if ($startPage == 0) {
+								$button = $("<button class='page' disabled><<</button>");
+								$div.append($button);
+							} else {
+								$button = $("<button class='page' id='goBackPage' onclick='vacationPage("
+										+ adminNo
+										+ ","
+										+ $beforeStartPage
+										+ ")'><<</button>");
+								$div.append($button);
+							}
+
+							for (i = $startPage; i < $endPage; i++) {
+								if (i != $currentPage) {
+									$button = $("<button class='page' onclick=vacationPage("
+											+ adminNo
+											+ ","
+											+ (i)
+											+ ')>'
+											+ (i + 1) + "</button>");
+								} else {
+									$button = $("<button disabled class='page'>"
+											+ (i + 1) + "</button>");
+								}
+
+								$div.append($button);
+							}
+
+							if ($maxPage == $endPage) {
+								$button = $("<button class='page' disabled>>></button>");
+								$div.append($button);
+							} else {
+								$button = $("<button class='page' id='goForwardPage' onclick='vacationPage("
+										+ adminNo
+										+ ","
+										+ $afterEndPage
+										+ ")>>></button>'");
+								$div.append($button);
+							}
+
+						},
+						error : function(error) {
+							console.log(error);
+						}
+					});
+		};
+
+		/* hover event */
+		function hover() {
+			const vacationList = document.getElementsByTagName("td");
+
+			for (let i = 0; i < vacationList.length; i++) {
+				vacationList[i].onmouseenter = function() {
+					this.parentNode.style.backgroundColor = "rgb(50,150,250)";
+					this.parentNode.style.cursor = "pointer";
+				}
+				vacationList[i].onmouseout = function() {
+					this.parentNode.style.backgroundColor = "white";
+				}
+
+				vacationList[i].onclick = function() {
+					location.href = "/admin/select/selectMyVacation/Detail/"
+							+ this.parentNode.children[0].innerText;
+				}
+			}
+		};
+
+		$(function() {
+			hover();
+		})
+	</script>
 
 </body>
 </html>
