--- a/com-project-clean/src/main/resources/templates/common/Header.html
+++ b/com-project-clean/src/main/resources/templates/common/Header.html
@@ -93,9 +93,11 @@
                 
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             
-                                <li><a class="dropdown-item" id="selectMyInfo" href="/member/selectEmployee/move">내정보 조회</a></li>
-                                <li><a class="dropdown-item" href="#">알림2</a></li>
-                                <li><a class="dropdown-item" href="#">알림3</a></li>
+                    			<th:block sec:authorize="hasRole('EMPLOYEE')">			
+                              	   <li><a class="dropdown-item" id="selectMyInfo" href="/member/selectEmployee/move">내정보 조회</a></li>
+                                </th:block>
+                             	   <li><a class="dropdown-item" href="#">알림2</a></li>
+                             	   <li><a class="dropdown-item" href="#">알림3</a></li>
                                 
                             </ul>
                         </li>
