--- a/com-project-clean/src/main/resources/templates/admin/checkList/selectDenialCheckListDetails.html
+++ b/com-project-clean/src/main/resources/templates/admin/checkList/selectDenialCheckListDetails.html
@@ -29,7 +29,7 @@
 	</form>
 </section>
 
-<div class="submitarea">
+<div class="submitarea" id="submitarea">
 	<input type="button" value="승인" id="accept">
 	&nbsp;&nbsp;&nbsp;&nbsp;
 	<input type="button" value="블랙+" id="denial">
@@ -55,6 +55,14 @@
 
 <!-- textarea script -->
 <script>
+	
+	if(document.getElementById("employeeOpnion2")){
+		console.log("있음111")
+	} else{
+		console.log("없음222")
+		const div = document.getElementById("submitarea");
+		div.remove();
+	}
 	
 	$("#adminOpnion").prop("readonly", true);
 	$("#adminOpnion2").prop("readonly", true);
