--- a/com-project-clean/src/main/resources/templates/admin/pay/management/adminPayWaiting.html
+++ b/com-project-clean/src/main/resources/templates/admin/pay/management/adminPayWaiting.html
@@ -109,7 +109,7 @@
 	var now = new Date();	// 현재 날짜 및 시간
 	var month = now.getMonth() + 1;	// 월
 	console.log("월 : ", month);
-	document.getElementById('current_date').innerHTML = '<b style="color:#1aabcb">' + month +'</b>' + '월달 급여를 받은 관리자 목록' ;
+	document.getElementById('current_date').innerHTML = '<b style="color:#7DBEED">' + month +'</b>' + '월달 급여를 받은 관리자 목록' ;
 	
 	
 	
