--- a/com-project-clean/src/main/resources/templates/admin/pay/management/bestEmployeePayPaging.html
+++ b/com-project-clean/src/main/resources/templates/admin/pay/management/bestEmployeePayPaging.html
@@ -24,7 +24,7 @@
 		height:32px;
 		font-size:13px;
 		padding: 0; 
-		background-color: #9AE8F9;
+		background-color: #7DBEED;
 	}
 	
 	/* 페이징버튼 css */
@@ -32,12 +32,19 @@
 		font-family: 'MinSans-Medium';
 		width:30px;
 		height:40px;
-		background-color: #9AE8F9;
+		background-color: #7DBEED;
 		border-color:gray;
 		border-style: none;
 		font-weight:bold;
 	}
 	
+	tr:nth-of-type(1){background: #7DBEED;}
+	table th{
+		border: 1px solid black;
+	}
+	table th,td{
+		cursor:default !important;
+	}
 	
 
 </style>
