--- a/com-project-clean/src/main/resources/templates/common/payAside.html
+++ b/com-project-clean/src/main/resources/templates/common/payAside.html
@@ -41,7 +41,7 @@ section{
 /* On mouse-over */
 .sidenav a:hover, .dropdown-btn:hover {
   -webkit-text-stroke: 1px;
-  color:rgb(88, 218, 245);
+  color:#7DBEED;
 }
 
 /* Add an active class to the active dropdown button */
