--- a/com-project-clean/src/main/resources/static/css/pay/adminPayWaiting.css
+++ b/com-project-clean/src/main/resources/static/css/pay/adminPayWaiting.css
@@ -4,7 +4,7 @@ table{
     font-family: 'MinSans-Medium';
     font-weight: normal;
     font-size:14px;
-    border:1px solid #9AE8F9;
+    border:1px solid #7DBEED;
     text-align: center;
     border-collapse: collapse;
   
@@ -23,7 +23,7 @@ table th, table tr, table td {
  }
  
  table th,table tr {
- 	 border: 1px solid #9AE8F9;
+ 	 border: 1px solid #7DBEED;
  }
  
  #modifyForm {
@@ -33,8 +33,8 @@ table th, table tr, table td {
  .borderText {
 	font-family: 'MinSans-Medium';
     font-weight: normal;
-    border-top:5px solid #9AE8F9;
-    border-bottom:5px solid #9AE8F9;
+    border-top:5px solid #7DBEED;
+    border-bottom:5px solid #7DBEED;
 }
 
 .payButton {
@@ -49,10 +49,10 @@ table th, table tr, table td {
 
 .payButton:hover{
 
-    background-color: #9AE8F9;
+    background-color: #7DBEED;
 }
 
-tr:nth-of-type(1){background: #9AE8F9;}
+tr:nth-of-type(1){background: #7DBEED;}
 
 table th{
 	border: 1px solid black;
