--- a/com-project-clean/src/main/resources/static/css/pay/surcharge.css
+++ b/com-project-clean/src/main/resources/static/css/pay/surcharge.css
@@ -17,7 +17,7 @@ table {
 	font-family: 'MinSans-Medium';
 	font-weight: normal;
 	font-style: normal;
-	border: 1px solid #9AE8F9;
+	border: 1px solid #7DBEED;
 	text-align: center;
 	border-collapse: collapse;
 	margin-top:20px;
@@ -55,7 +55,7 @@ table th, table tr, table td {
 
 #surchargeTable tr:nth-of-type(1), #surchargeUpdateTable tr:nth-of-type(1)
 	{
-	background: #9AE8F9;
+	background: #7DBEED;
 }
 
 th input {
@@ -69,7 +69,7 @@ th input {
 	width: 170px;
 	height: 40px;
 	border-style: none;
-	background: #9AE8F9;
+	background: #7DBEED;
 	color: white;
 	font-size: medium;
 	float:right;
