--- a/com-project-clean/src/main/resources/templates/admin/pay/management/bestEmployeePayWaiting.html
+++ b/com-project-clean/src/main/resources/templates/admin/pay/management/bestEmployeePayWaiting.html
@@ -18,7 +18,7 @@ a {text-decoration: none !important;
 	color:black !important;
 }
 section{
-	border:4px solid #9AE8F9;
+	border:4px solid #7DBEED;
 	padding:60px;
 }
 .payButton {
@@ -32,7 +32,7 @@ section{
 }
 
 .payButton:hover{
-    background-color: #9AE8F9;
+    background-color: #7DBEED;
 }
 </style>
 <title>Insert title here</title>
@@ -69,7 +69,7 @@ section{
 	var now = new Date();	// 현재 날짜 및 시간
 	var month = now.getMonth() + 1;	// 월
 	console.log("월 : ", month);
-	document.getElementById('current_date').innerHTML = '<a href="#"> <b style="color:#1aabcb">' + month +'</b>' + '월달의 우수사원 보러가기 </a>' ;
+	document.getElementById('current_date').innerHTML = '<a href="#"> <b style="color:#7DBEED">' + month +'</b>' + '월달의 우수사원 보러가기 </a>' ;
 	
 	
 	
