--- a/com-project-clean/src/main/resources/templates/employee/pay/myPay/myPayForEmployeePaging.html
+++ b/com-project-clean/src/main/resources/templates/employee/pay/myPay/myPayForEmployeePaging.html
@@ -24,7 +24,7 @@
 		height:32px;
 		font-size:13px;
 		padding: 0; 
-		background-color: #9AE8F9;
+		background-color: #7DBEED ;
 	}
 	
 	/* 페이징버튼 css */
@@ -32,7 +32,7 @@
 		font-family: 'MinSans-Medium';
 		width:30px;
 		height:40px;
-		background-color: #9AE8F9;
+		background-color: #7DBEED ;
 		border-color:gray;
 		border-style: none;
 		font-weight:bold;
