--- a/com-project-clean/src/main/resources/static/css/reservation/detail.css
+++ b/com-project-clean/src/main/resources/static/css/reservation/detail.css
@@ -19,19 +19,19 @@ th, td {
 }
 
 th {
-	background-color: #9AE8F9;
+	background-color: #7DBEED;
 }
 
 span {
 	margin-right: 10px;
-	border-right: 3px solid #9AE8F9;
+	border-right: 3px solid #7DBEED;
 }
 
 button {
 	font-family: 'MinSans-Medium';
 	width: 130px;
 	height: 40px;
-	background-color: #9AE8F9;
+	background-color: #7DBEED;
 	border-color: gray;
 	border-style: none;
 	font-weight: bold;
@@ -45,7 +45,7 @@ div {
 .emp{
 	font-weight: 700;
 	font-size: 15px;
-	background-color: #9AE8F9;
+	background-color: #7DBEED;
 	border: 5px solid white;
 	border-radius: 50px;
 	display: inline-block;
@@ -55,4 +55,8 @@ div {
 .empName, .empButton{
 	padding: 0px;
 	margin: 0px;
+}
+.applyYn{
+	color: red;
+	margin-bottom: 10px;
 }
