--- a/com-project-clean/src/main/resources/templates/reservation/admin/adminReservationDetail.html
+++ b/com-project-clean/src/main/resources/templates/reservation/admin/adminReservationDetail.html
@@ -96,7 +96,7 @@
 			
 				$(".employeeButton[[${applyEmployeeStat.count}]]" && ".employee[[${applyEmployeeStat.count}]]").on("click", function(){
 				   if(confirm("정말로 삭제하시겠습니까?")){
-					   const con = confirm("패털티 추가할래요?");
+					   const con = confirm("패털티 추가하시겠습니까?");
 					   if(con){
 						   penalty++;
 					   }
