--- a/com-project-clean/src/main/resources/templates/reservation/notificationList.html
+++ b/com-project-clean/src/main/resources/templates/reservation/notificationList.html
@@ -19,8 +19,8 @@
 	<div th:if ="${message} == null">
 		<div th:include="common/header.html"></div>
 		<div th:include="common/reservationAside.html"></div>
-		<h1 class="head" align="center"
-			th:text="${#dates.format(date, 'yyyy-MM-dd')}"></h1>
+		<h1 class="head"  align="center">알림</h1>
+		
 		<table align="center" border="1">
 			<tr>
 				<th style="display: none;"></th>
