--- a/com-project-clean/src/main/resources/templates/reservation/reservationMyListPaging.html
+++ b/com-project-clean/src/main/resources/templates/reservation/reservationMyListPaging.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymleaf.org"><!-- 타임리프 활용하기(네임스키마 문법 추가) -->
 <head>
 <meta charset="UTF-8">
+<link href='/css/reservation/paging.css' rel='stylesheet' />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <title>Insert title here</title>
 </head>
